# pLM-steer-ILMC

./: .gitignore  Makefile  README.md  pyproject.toml
Classifier_Steering/: README.md  requirements.txt
Classifier_Steering/Prefix_Classifier/: classifier_training.ipynb  pf00196_prefix_string_metrics.csv
Classifier_Steering/Sampling/: Sample.ipynb
Classifier_Steering/Sampling/sampling_utils/: Transformer_Reint.py  __init__.py  mc.py  transformer.py
Classifier_Steering/Training_DATA/: RR_pf00196_labels.txt
data/: chorismate_mutase.fasta  phage_lysozyme.fasta
scripts/: check_envs.py  compute_esmfold_plddt.py  compute_generation_metrics.py  finetune_progen.sh  run_progen_mc.sh  run_sdo_mc.sh  train_base.sh
scripts/experiments_progen/: diversity_cm_config.csv  diversity_pl_config.csv  run_mc_diversity_cm.sh  run_mc_diversity_pl.sh  run_mc_thermostability_cm.sh  run_mc_thermostability_pl.sh
src/plm_steer/: potentials.py  sampling.py
src/plm_steer/model/: sampler.py  tokenizer.py  transformer.py
src/plm_steer/scripts/base/: run_block_mc.py  train.py
src/plm_steer/scripts/progen/: finetune.py  run_block_mc.py
src/plm_steer/utils/: common.py
src/plm_steer/utils/progen/: generate.py  train.py
